aumento de cobertura + ajustes