@@ -1,5 +1,6 @@
 package br.com.order.application.infra;
 
+import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 import org.springframework.http.HttpStatus;
 
@@ -7,7 +8,6 @@ import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
-import static org.junit.Assert.assertTrue;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNull;
 
@@ -23,14 +23,6 @@ class ApiErrorMessageTest {
     }
 
     @Test
-    void testApiErrorMessageNoArgsConstructor2() {
-        ApiErrorMessage apiErrorMessage = new ApiErrorMessage();
-
-        assertNull(apiErrorMessage.getStatus());
-        assertNull(apiErrorMessage.getErrors());
-    }
-
-    @Test
     void testApiErrorMessageWithArgsConstructor() {
         HttpStatus status = HttpStatus.BAD_REQUEST;
         List<String> errors = Arrays.asList("Error 1", "Error 2");
@@ -39,14 +31,13 @@ class ApiErrorMessageTest {
 
         assertEquals(HttpStatus.BAD_REQUEST, apiErrorMessage.getStatus());
         assertEquals(2, apiErrorMessage.getErrors().size());
-        assertTrue(apiErrorMessage.getErrors().contains("Error 1"));
-        assertTrue(apiErrorMessage.getErrors().contains("Error 2"));
+        Assertions.assertTrue(apiErrorMessage.getErrors().contains("Error 1"));
+        Assertions.assertTrue(apiErrorMessage.getErrors().contains("Error 2"));
     }
 
     @Test
     void testApiErrorMessageNoArgsConstructor() {
         ApiErrorMessage apiErrorMessage = new ApiErrorMessage();
-
         assertNull(apiErrorMessage.getStatus());
         assertNull(apiErrorMessage.getErrors());
     }
@@ -56,7 +47,7 @@ class ApiErrorMessageTest {
         ApiErrorMessage apiErrorMessage = new ApiErrorMessage();
 
         apiErrorMessage.setStatus(HttpStatus.INTERNAL_SERVER_ERROR);
-        apiErrorMessage.setErrors(Arrays.asList("Internal Error"));
+        apiErrorMessage.setErrors(List.of("Internal Error"));
 
         assertEquals(HttpStatus.INTERNAL_SERVER_ERROR, apiErrorMessage.getStatus());
         assertEquals(1, apiErrorMessage.getErrors().size());
